Ajustes solicitados por Arthur 28/03 à tarde parte 1
- Responsividade, removi os espaçamentos entre as palavras na frase dos 3C e 3S;
- Correção do número de contato que o botão flutuante do whatsapp que está direcionando;
- No footer, correção do nome "Araújo" que antes estava sem acento;
- Remoção do * nos formulários;
- Criação da pág de Política de Privacidade e adição do link para ir até ela no footer das demais págs.

--- a/PAGES/servicos.html
+++ b/PAGES/servicos.html
@@ -44,7 +44,7 @@
 
     <!-- Whatsapp Flutuante -->
     <div class="whatsapp">
-        <a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank"><img src="../IMG/whatsapp (4).png" alt="Icone WhatsApp"></a>
+        <a href="https://api.whatsapp.com/send?phone=5581996550146&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank"><img src="../IMG/whatsapp (4).png" alt="Icone WhatsApp"></a>
     </div>
 
     <!-- Main -->
@@ -414,13 +414,13 @@
             <form action="">
                 <!-- Nome -->
                 <div class="formulario-input">
-                    <label for="">Seu nome completo*</label>
+                    <label for="">Seu nome completo</label>
                     <input type="text" id="nome" placeholder="Digite seu nome aqui">
                 </div>
 
                 <!-- E-mail -->
                 <div class="formulario-input">
-                    <label for="">Seu email*</label>
+                    <label for="">Seu email</label>
                     <input type="text" id="email" placeholder="Digite seu email aqui">
                 </div>
 
@@ -428,7 +428,7 @@
                 <div class="formulario-dupla">
                     <!-- Telefone -->
                     <div class="formulario-input">
-                        <label for="">Seu telefone*</label>
+                        <label for="">Seu telefone</label>
                         <input type="text" id="telefone" placeholder="Digite seu telefone aqui">
                     </div>
 
@@ -470,7 +470,7 @@
             <img src="../IMG/imgSOBRE/LOGO-PreventHorizontalBranco.png" alt="Logo da empresa" class="footer-img">
 
             <div class="footer-containerInfo">
-                <!-- Localização -->
+                <!-- Horário -->
                 <div class="footer-infos">
                     <div>
                         <i class="bi bi-clock info-icon"></i>
@@ -490,7 +490,7 @@
                     
                     <!-- Informação -->
                     <a href="https://maps.app.goo.gl/iV4iQEUWJnFEJuDG8" target="_blank">
-                        <p>Rua Manoel de Araujo, 356 - <br> Pau Amarelo, Paulista 53433-480</p>
+                        <p>Rua Manoel de Araújo, 356 - <br> Pau Amarelo, Paulista 53433-480</p>
                     </a>
                 </div>
     
@@ -514,7 +514,8 @@
 
         <!-- Parte de baixo -->
          <section class="parteDeBaixo">
-            <p>Desenvolvido pela <a href="https://www.instagram.com/cv.criatividadevirtual/" target="_blank">@cv.criatividadevirtual</a></p>
+            <!-- Quem desenvolveu + Política de Privacidade -->
+            <p>Desenvolvido pela <a href="https://www.instagram.com/cv.criatividadevirtual/" target="_blank">@cv.criatividadevirtual</a> | <a href="../PAGES/politicaPrivacidade.html" target="_blank">Política de Privacidade e Termos de Uso</a></p>
 
             <!-- Ícones do Instagram e do Facebook -->
             <div>
