--- a/PAGES/sobre.html
+++ b/PAGES/sobre.html
@@ -45,7 +45,7 @@
     <main>
         <!-- Whatsapp Flutuante -->
         <div class="whatsapp">
-            <a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank"><img src="../IMG/whatsapp (4).png" alt="Icone WhatsApp"></a>
+            <a href="https://api.whatsapp.com/send?phone=5581996550146&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank"><img src="../IMG/whatsapp (4).png" alt="Icone WhatsApp"></a>
         </div>
 
         <!-- Container que engloba os textos e a img-->
@@ -87,17 +87,17 @@
         <div class="formulario">
             <form action="">
                 <div class="formulario-input">
-                    <label for="">Seu nome completo*</label>
+                    <label for="">Seu nome completo</label>
                     <input type="text" id="nome" placeholder="Digite seu nome aqui">
                 </div>
 
                 <div class="formulario-input">
-                    <label for="">Seu email*</label>
+                    <label for="">Seu email</label>
                     <input type="text" id="email" placeholder="Digite seu email aqui">
                 </div>
 
                 <div class="formulario-input">
-                    <label for="">Seu telefone*</label>
+                    <label for="">Seu telefone</label>
                     <input type="text" id="telefone" placeholder="Digite seu telefone aqui">
                 </div>
 
@@ -135,7 +135,7 @@
     
                 <!-- Informações -->
                 <div class="footer-containerInfo">
-                    <!-- Localização -->
+                    <!-- Horário -->
                     <div class="footer-infos">
                         <div>
                             <!-- Icon da informação -->
@@ -172,7 +172,7 @@
                         
                         <!-- Texto da informação -->
                         <a href="https://maps.app.goo.gl/iV4iQEUWJnFEJuDG8" target="_blank">
-                            <p>Rua Manoel de Araujo, 356 - Pau Amarelo, Paulista <br> 53433-480</p>
+                            <p>Rua Manoel de Araújo, 356 - Pau Amarelo, Paulista <br> 53433-480</p>
                         </a>
                     </div>
                 </div>
@@ -191,8 +191,8 @@
 
         <!-- Parte de baixo -->
          <section class="parteDeBaixo">
-            <!-- Quem desenvolveu o site -->
-            <p>Desenvolvido pela <a href="https://www.instagram.com/cv.criatividadevirtual/" target="_blank">@cv.criatividadevirtual</a></p>
+            <!-- Quem desenvolveu + Política de Privacidade -->
+            <p>Desenvolvido pela <a href="https://www.instagram.com/cv.criatividadevirtual/" target="_blank">@cv.criatividadevirtual</a> | <a href="../PAGES/politicaPrivacidade.html" target="_blank">Política de Privacidade e Termos de Uso</a></p>
 
             <!-- Container do ícones do Instagram e do Facebook -->
             <div>
