Adição do favicon e do nome da página na aba do site

--- a/PAGES/servicos.html
+++ b/PAGES/servicos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prevent Elevadores</title>
+    <title>Prevent Elevadores | Serviços</title>
 
     <!-- META TAG -->
     <meta property="og:type" content="website"/>
@@ -23,6 +23,8 @@
     <script src="../JS/modalFormulario.js" defer></script>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="../IMG/LOGO-PreventCircular.png" type="image/x-icon">
 </head>
 <body>
 
