--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prevent Elevadores</title>
+    <title>Prevent Elevadores | Home</title>
     
 
     <!-- META TAG -->
@@ -19,6 +19,9 @@
     <script src="JS/script.js" defer></script>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="IMG/LOGO-PreventCircular.png" type="image/x-icon">
 </head>
 <body>
 
