Mudei o form para tentar corrigir um problema de excesso de tamanho para mobile (principalmente IOS)
Também fiz:
- Adicionei uma variante do vermelho, uma cor amarela e uma cor verde no base.css;
- De certa forma, acho que refatorei algumas partes dos códigos.

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                 </div>
         
                 <!-- Mensagem aparece se todos os campos não forem preenchidos -->
-                <p id="erro-msg" style="color: rgb(0, 0, 0); background-color: rgb(255, 251, 1); padding: 5px 10px; width: fit-content; border-radius: 12px; display: none;">Preencha todos os campos!</p>
+                <p id="form-mensagemErro">Preencha todos os campos!</p>
         
                 <!-- Botão para enviar o form -->
                 <div class="form-button">
