Alteração da mensagem do botão flutuante do Whatsapp
- Ajuste pedido por Arthur PD.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Whatsapp Flutuante -->
     <div class="whatsapp">
-        <a href="https://api.whatsapp.com/send?phone=5581996550146&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank"><img src="IMG/whatsapp (4).png" alt="Icone WhatsApp"></a>
+        <a href="https://api.whatsapp.com/send?phone=5581996550146&text=Ol%C3%A1,%20vim%20atrav%C3%A9s%20do%20site%20e%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!%20" target="_blank"><img src="IMG/whatsapp (4).png" alt="Icone WhatsApp"></a>
     </div>
     
     <!-- Navbar -->
